<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9EFF0000"
    tools:context=".Settingssite">

    <Button
        android:id="@+id/button_stats"
        android:layout_width="215dp"
        android:layout_height="79dp"
        android:backgroundTint="#E0E0E0"
        android:fontFamily="@font/bauhaus"
        android:text="@string/stats"
        android:textSize="34sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <Button
        android:id="@+id/button_language"
        android:layout_width="215dp"
        android:layout_height="79dp"
        android:backgroundTint="#E0E0E0"
        android:fontFamily="@font/bauhaus"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <Button
        android:id="@+id/button_Output"
        android:layout_width="215dp"
        android:layout_height="79dp"
        android:backgroundTint="#E0E0E0"
        android:fontFamily="@font/bauhaus"
        android:text="@string/Output"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617" />

    <TextView
        android:id="@+id/textview_settings1"
        android:layout_width="180dp"
        android:layout_height="59dp"
        android:fontFamily="@font/bauhaus"
        android:gravity="center"
        android:text="@string/Settings"
        android:textColor="@color/black"
        android:textColorHint="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <ImageButton
        android:id="@+id/button_home"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/button"
        android:scaleType="fitXY"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.998" />

</androidx.constraintlayout.widget.ConstraintLayout>