<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/language"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9EFF0000"
    tools:context=".language">

    <ImageButton
        android:id="@+id/backsettings2"
        android:layout_width="120dp"
        android:layout_height="115dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/returnbtn"
        android:contentDescription="go_back_setting" />

    <TextView
        android:id="@+id/textview_settings1"
        android:layout_width="180dp"
        android:layout_height="59dp"
        android:fontFamily="@font/bauhaus"
        android:gravity="center"
        android:text="@string/Settings"
        android:textColor="@color/black"
        android:textColorHint="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <Button
        android:id="@+id/button_language2"
        android:layout_width="215dp"
        android:layout_height="79dp"
        android:backgroundTint="#E0E0E0"
        android:fontFamily="@font/bauhaus"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <RadioGroup
        android:id="@+id/RGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_language2">

        <RadioButton
            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bauhaus"
            android:text="@string/english"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/button_language2"
            app:layout_constraintStart_toStartOf="@+id/button_language2"
            app:layout_constraintTop_toBottomOf="@+id/button_language2" />

        <RadioButton
            android:id="@+id/german"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bauhaus"
            android:text="@string/german"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/button_language2"
            app:layout_constraintStart_toStartOf="@+id/button_language2"
            app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>