<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9EFF0000"
    tools:context=".dictionary">

    <Button
        android:id="@+id/restoreDict"
        android:layout_width="147dp"
        android:layout_height="70dp"
        android:backgroundTint="#A3109A8D"
        android:fontFamily="@font/bell_mt_fett"
        android:text="Restore original dictionary"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/listView"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        app:layout_constraintVertical_bias="0.506"
        app:strokeColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="275dp"
        android:layout_height="62dp"
        android:fontFamily="@font/bauhaus"
        android:layout_marginTop="24dp"
        android:text="@string/dictionary"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/addWords"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addWords"
        android:layout_width="316dp"
        android:layout_height="45dp"
        android:background="@drawable/listback"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/bell_mt_fett"
        android:gravity="start|fill|left"
        android:textSize="22sp"
        android:hint="@string/add_words_to_the_dictionary"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="339dp"
        android:layout_height="383dp"
        android:background="@drawable/listback"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@+id/addWords"
        app:layout_constraintTop_toBottomOf="@+id/addWords" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="46dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/tickmark"
        android:textAlignment="center"
        android:textSize="20sp"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/addWords"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/clearDict"
        android:layout_width="147dp"
        android:layout_height="70dp"
        android:backgroundTint="#A3109A8D"
        android:fontFamily="@font/bell_mt_fett"
        android:text="Clear dictionary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/listView"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        app:layout_constraintVertical_bias="0.495"
        app:strokeColor="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>